# LegalAgent

./: CLAUDE.md  README.md  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  documents.py  health.py
app/core/: config.py  exceptions.py  logging.py
app/models/: analysis.py  document.py  playbook.py
