[project]
name = "legalagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Document parsing
    "docling>=2.0.0",
    "unstructured[pdf,docx]>=0.14.0",
    "pymupdf>=1.24.0",

    # NLP
    "spacy>=3.7.0",
    "gliner>=0.2.0",

    # Embeddings & vector store
    "llama-index>=0.10.0",
    "llama-index-vector-stores-qdrant>=0.2.0",
    "llama-index-embeddings-ollama>=0.2.0",
    "qdrant-client>=1.9.0",

    # LLM
    "ollama>=0.2.0",
    "llama-index-llms-ollama>=0.2.0",

    # Database (async)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # Storage
    "boto3>=1.34.0",            # S3-compatible storage for documents

    # Observability
    "structlog>=24.0.0",
    "opentelemetry-sdk>=1.24.0",

    # Utilities
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]